Fixed bug caused by the wrapping effect of the last fix. Now the navbar and h1 should not overlap on devices.

--- a/src/App.css
+++ b/src/App.css
@@ -152,8 +152,23 @@ p {
   width: 100%;
   z-index: 1000;
 }
-.nav-pages {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap
+@media only screen and (max-width: 400px) {
+    .nav-pages {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap
+    }
+    body {
+        padding-top: 135px;
+    }
+}
+@media only screen and (max-width: 268px) {
+    .nav-pages {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap
+    }
+    body {
+        padding-top: 175px;
+    }
 }
